--- a/oolab/build.gradle
+++ b/oolab/build.gradle
@@ -18,6 +18,7 @@ repositories {
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+    implementation 'com.google.code.gson:gson:2.11.0'
 }
 
 test {
